# starmap-svg

./: .gitignore  README.md  setup.cfg  setup.py  starmap.py
datafiles/: constellation.txt  constellation_lines.txt  extradata.txt  keplerian_elements_jpl.txt  ybsc5.txt  ybsc5_readme.txt
