[metadata]
name = starmap-svg
author = Skeletor
author-email = skeletor.skeletor@gmail.com
url = https://github.com/skeletor-git/starmap-svg
summary = Awesome svg starmaps
description-file = README.md
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

py_modules=["starmap"]

[entry_points]
console_scripts =
    starmap = starmap:main

[files]
data_files =
    data = datafiles/*

[wheel]
universal = 1
